update pfofile
